--- a/index.html
+++ b/index.html
@@ -9,11 +9,20 @@
 <body>
     <Header>
         <h1>Discover hidden places in the world around you</h1>
-        <a href="no link provides yet">Download Excursion (Coming Soon!)</a>
+        <a href="link goes here">Download Excursion (Coming Soon!)</a>
     </header>
     <main>
         <section class="video-section"> 
-        <video autoplay src="resources/videos/excursion.mp4"></video>
+        <video autoplay muted loop>
+            <source src="resources/videos/excursion.mp4" autype="video/mp4">
+  <source src="resources/videos/excursion.webm" type="video/webm">
+  Your browser does not support the video tag.
+
+      
+</video>
+
+</video>
+
         </section>
     
 
