--- a/index.html
+++ b/index.html
@@ -12,14 +12,19 @@
         <a href="link goes here">Download Excursion (Coming Soon!)</a>
     </header>
     <main>
-        <section class="video-section"> 
+        <section class="video"> 
         <video autoplay muted loop playsinline>
             <source src="resources/videos/excursion.mp4" type="video/mp4">
   <source src="resources/videos/excursion.webm" type="video/webm"> 
+</section>
+
 </video>
 
-
-        </section>
+<section class="travel">
+<h1>Your personal travel guide</h1>
+<p> Excursion remembers places you like, and recommends new points of interst around you.</p>
+<image src="resources/img/camp.jpg" alt="camping">
+</section>
     
 
     </main>
