redo travel section commit

--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
         <video autoplay src="resources/videos/excursion.mp4"></video>
         </section>
     
+</section>
+<section class="travel">
+<h1>Your personal travel guide</h1>
+<p> Excursion remembers places you like, and recommends new points of interst around you.</p>
+<image src="resources/img/camp.jpg" alt="camping">
+</section>
 
     </main>
 
