--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         <section class="video"> 
         <video autoplay muted loop playsinline>
             <source src="resources/videos/excursion.mp4" type="video/mp4">
-  <source src="resources/videos/excursion.webm" type="video/webm"> </video>
+  <source src="resources/videos/excursion.webm" type="video/webm"> 
+</video>
 </section>
     
 <section class="travel">
@@ -23,6 +24,13 @@
 <p> Excursion remembers places you like, and recommends new points of interst around you.</p>
 <image src="resources/img/camp.jpg" alt="camping">
 </section>
+
+<section class="coming-soon">
+ <img src="resources/img/phone.png" alt="phone">
+ <h1>Coming Soon for iphone and Android</h1>
+  <a href="link goes here">Download Excursion (Coming Soon!)</a>
+</section>
+
 
     </main>
 </body>
