--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
   <a href="link goes here">Download Excursion (Coming Soon!)</a>
 </section>
 
-
+<footer>
+    <H4>© Excursion</H4>
+</footer>
     </main>
 </body>
 </html>
