--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <a href="link goes here">Download Excursion (Coming Soon!)</a>
     </header>
     <main>
-        <section class="video"> 
+        <section class="phone-video"> 
         <video autoplay muted loop playsinline>
             <source src="resources/videos/excursion.mp4" type="video/mp4">
   <source src="resources/videos/excursion.webm" type="video/webm"> 
